# scout-chromium-portablelinux

./: .gitmodules  README.md  flags.linux.gn
fingerprint_tables/: README.md  archetypes.json  chrome_versions.json  generate.py  gpu_models.json  optional_fonts.json  optional_voices.json  platform_versions.json
scripts/: build.sh  shared.sh
