# --- NEW: CPU baseline/tuning for 2017+ x86_64 (AVX2/BMI2/FMA) ---
extra_cflags = [
  "-march=x86-64-v3",
  "-mtune=znver1",  # or "-mtune=znver2" if you mainly target Zen2+
]
extra_cxxflags = extra_cflags
extra_ldflags = []

# --- NEW: ThinLTO like upstream release builds ---
use_thin_lto = true
thin_lto_enable_optimizations = true

# --- NEW (optional): use Chromium’s prebuilt PGO profile on Linux ---
chrome_pgo_phase = 2

is_official_build=true
symbol_level=0
disable_fieldtrial_testing_config=true
blink_enable_generated_code_formatting=false
blink_symbol_level=0
ffmpeg_branding="Chrome"
proprietary_codecs=true
fatal_linker_warnings=false
rtc_use_pipewire=true
is_clang=true
is_debug=false
use_kerberos=false
use_sysroot=true
use_vaapi=true
use_system_libffi=false
